--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Profile</title>
+    <script src="script.js"></script>
+</head>
+<body>
+    <h1>My Profile</h1>
+    <script>
+        const fullName = firstName + " " + lastName;
+        const profile = `Hi, my name is ${fullName}. I studied for ${yearsOfStudy} years and my goal is to ${goal}.`;
+        document.write(profile);
+    </script>
+</body>
+</html>
 
